chore(vth-frontend): fix the header spacing

--- a/apps/vth-frontend/src/styles/globals.css
+++ b/apps/vth-frontend/src/styles/globals.css
@@ -128,7 +128,6 @@ a {
 }
 
 .utrecht-page-header {
-  --utrecht-page-header-padding-block-start: 0;
   --utrecht-page-padding-inline-start: 0;
   --utrecht-page-padding-inline-end: 0;
 
